<resources>
    <string name="app_name">Kiu</string>
    <string name="kiuer">Kiuer</string>
    <string name="helper">Helper</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="birth">Birth</string>
    <string name="telephone">Telephone</string>
    <string name="feedback">Feedback</string>
    <string name="favorite_city">Favorite City</string>
    <string name="email">Email</string>
    <string name="favorite_cost">Favorite Cost</string>
    <string name="profile_status">Profile Status</string>
    <string name="closed_post">Closed Posts</string>
    <string name="open_post">Open Posts</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ip_address">IP Address</string>


    <string name="post">Post</string>
    <string name="post_status">Post Status</string>
    <string name="kiuer_post">Kiuer Post</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="cost">Cost</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="preview">Preview</string>
    <string name="create_post">Create Post</string>

    <string name="create_your_post">Create your post</string>
    <string name="action">Action</string>
    <string name="next">Next</string>
    <string name="ask_for_title">Insert the title</string>
    <string name="ask_for_title_city">Title and City</string>
    <string name="ask_for_status">Insert the status</string>
    <string name="ask_for_duration">Insert the duration</string>
    <string name="ask_for_start_date">Insert the start date</string>
    <string name="ask_for_end_date">Insert the end date</string>
    <string name="ask_for_start_hour">Insert the start hour</string>
    <string name="ask_for_end_hour">Insert the end hour</string>
    <string name="ask_for_city">Insert the city</string>
    <string name="ask_for_location">Insert the location</string>
    <string name="ask_for_address">Insert the address</string>
    <string name="ask_for_cost">Insert the cost</string>
    <string name="ask_for_end_date_hour">End Date and End Hour</string>
    <string name="ask_for_start_date_hour">Start Date and Start Hour</string>
    <string name="title_status">Title and Status</string>
    <string name="start_date_duration">Start Date, Start Hour and Duration</string>
    <string name="city_address_location">City, Address and Location</string>
    <string name="post_created">Post Created</string>
    <string name="title">Title</string>
    <string name="start_date_before_today">Start date cannot be before today</string>
    <string name="cost_preview">Click for Cost Preview</string>

    <string name="drawable_text_kiuer">Kiuer</string>
    <string name="drawable_text_helper">Helper</string>
    <string name="drawable_text_requests">Requests</string>
    <string name="drawable_text_posts">Posts</string>
    <string name="drawable_text_friends">Friends</string>
    <string name="drawable_text_kiuing">Kiuing</string>
    <string name="drawable_text_your_profile">Your Profile</string>

    <string name="searchBtn">Search</string>
    <string name="posts">Posts</string>
    <string name="wait_for_me">Wait For Me</string>
    <string name="rate_it">Rate it!</string>
    <string name="successfully_rated">Successfully Rated!</string>

    <string name="request_post_kiuer">A Kiuer sent you a request!</string>
    <string name="request_post_helper">An Helper sent you a request!</string>
    <string name="sent_you_a_request">sent you a request!</string>
    <string name="send_a_request">Send a request</string>
    <string name="send_request_to">Send request to </string>
    <string name="choose_post">Choose the post</string>
    <string name="sender">Sender</string>
    <string name="message">Message</string>
    <string name="requests">Requests</string>
    <string name="request_body">Touch to open requests</string>
    <string name="arrived_request">You have a new request</string>
    <string name="accepted_request">Your request has been accepted</string>
    <string name="refused_request">Your request has been refused</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="send">Send</string>
    <string name="post_selected">Post selected</string>
    <string name="no_kiuing">No Kiuing open process</string>
    <string name="refresh">Refresh</string>
    <string name="minutes_for_begin">minutes for the beginning of the Kiuing</string>
    <string name="kiuiung_started">Kiuing has started!</string>
    <string name="kiuiung_finished">Kiuing is finished!</string>
    <string name="your_posts">Your Posts</string>
    <string name="kiuing">Kiuing</string>

    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="loginBtn">Login</string>
    <string name="checkbox_text">Remember me!</string>
    <string name="login">Don\'t have an account?</string>
    <string name="link_login">Sign up!</string>

    <string name="opSuccessfully">Operation succesfully!</string>
    <string name="loginFailed">Wrong username or passworrd!</string>
    <string name="loginFailedUnchecked">Are you Kiuer or Helper?</string>

    <string name="first_execute_title">Oops!!</string>
    <string name="first_execute_text">We need your server IP address in order to execute the app</string>
    <string name="ok">OK</string>
</resources>
