<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/id_kiuer_drawer_menu_icon_kiuer"
                    android:title="@string/drawable_text_kiuer" />
                <item
                    android:id="@+id/id_kiuer_drawer_menu_icon_helper"
                    android:title="@string/drawable_text_helper" />
                <item
                    android:id="@+id/id_kiuer_drawer_menu_icon_requests"
                    android:title="@string/drawable_text_requests" />
                <item
                    android:id="@+id/id_kiuer_drawer_menu_icon_posts"
                    android:title="@string/drawable_text_posts" />
                <item
                    android:id="@+id/id_kiuer_drawer_menu_icon_kiuing"
                    android:title="@string/drawable_text_kiuing" />
            </group>
        </menu>
    </item>
</menu>