<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_view_post_kiuer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_view_post_kiuer_kiuer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/kiuer" />

            <TextView
                android:id="@+id/fragment_view_post_kiuer_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/fragment_view_post_kiuer_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/address" />
            <TextView
                android:id="@+id/fragment_view_post_kiuer_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/fragment_view_post_kiuer_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/start" />

            <TextView
                android:id="@+id/fragment_view_post_kiuer_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/duration" />
            <TextView
                android:id="@+id/fragment_view_post_kiuer_cost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/cost" />
            <Button
                android:id="@+id/fragment_view_post_kiuer_request_button"
                android:visibility="invisible"
                android:clickable="false"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_a_request"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>