<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_create_cost_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/fragment_create_cost_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:elevation="4dp"
            android:paddingBottom="50dp"
            android:layout_marginTop="65dp">

            <TextView
                android:id="@+id/fragment_create_cost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/cost"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_create_cost_main_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_create_cost_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="numberDecimal"
                android:background="@color/darkPrimaryColor"
                android:focusableInTouchMode="true"
                android:textColor="#fff"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="@string/ask_for_cost"/>
            <EditText
                android:id="@+id/fragment_create_cost_duration_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/darkPrimaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/ask_for_duration" />
            <RadioButton
                android:id="@+id/fragment_create_cost_radio_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cost_preview"
                android:elevation="4dp"
                android:padding="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >
                <Button
                    android:id="@+id/fragment_create_preview_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preview"/>
                <Button
                    android:id="@+id/fragment_create_create_button"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_post"/>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>