<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_request_kiuer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/fragment_request_kiuer_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:elevation="4dp"
            android:padding="24dp"
            android:layout_marginTop="65dp">

            <TextView
                android:id="@+id/fragment_request_kiuer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_post_helper"
                android:textColor="#fff" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_request_kiuer_main_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_request_kiuer_helper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/helper" />

            <TextView
                android:id="@+id/fragment_request_kiuer_post"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/post" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >
                <Button
                    android:id="@+id/fragment_request_kiuer_accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"/>
                <Button
                    android:id="@+id/fragment_request_kiuer_refuse_button"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refuse"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>