<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_edit_post_kiuer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <RelativeLayout
            android:id="@+id/fragment_edit_post_kiuer_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            android:layout_marginTop="65dp">


            <ImageView
                android:id="@+id/fragment_edit_post_kiuer_drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/post"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_edit_post_kiuer_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/post_status"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_edit_post_kiuer_main_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_kiuer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/kiuer" />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/start" />

            <TextView
                android:id="@+id/fragment_edit_post_kiuer_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/duration" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>