<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_view_post_helper_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/fragment_view_post_helper_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            android:layout_marginTop="65dp">


            <ImageView
                android:id="@+id/fragment_view_post_helper_action_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/fragment_view_post_helper_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/post"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_view_post_helper_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_view_post_helper_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/post_status"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_view_post_helper_main_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_view_post_helper_helper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/helper" />

            <TextView
                android:id="@+id/fragment_view_post_helper_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/fragment_view_post_helper_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/start" />

            <TextView
                android:id="@+id/fragment_view_post_helper_end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/end" />
            <TextView
                android:id="@+id/fragment_view_post_helper_cost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/cost" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>