<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/fragment_request_helper_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/fragment_request_helper_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:elevation="4dp"
            android:padding="24dp"
            android:layout_marginTop="65dp">

            <TextView
                android:id="@+id/fragment_request_helper_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_post_kiuer"
                android:textColor="#fff" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_request_helper_main_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_request_helper_kiuer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:hint="@string/kiuer"
                android:textColorHint="@color/textIconColor"/>

            <TextView
                android:id="@+id/fragment_request_helper_post"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="@color/primaryColor"
                android:textColor="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:hint="@string/post"
                android:textColorHint="@color/textIconColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >
                <Button
                    android:id="@+id/fragment_request_helper_accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="@color/textIconColor"/>
                <Button
                    android:id="@+id/fragment_request_helper_refuse_button"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refuse"
                    android:textColor="@color/textIconColor"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>